added header styles link

--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New-year-new-me</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@100&family=Work+Sans:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-
-
+        <nav>
+            <h1 class="nav-title">All Thinks Are Possible If You believe</h1>
+        <p class="nav-description">There are many variations of passages of    Lorem Ipsum available, but the majority have suffered alteration in     some form, by injected humour, or randomised words</p>
+            <button class="primary-button">Contact Us</button>
+        </nav>
     </header>
     <main>
 
@@ -18,7 +24,7 @@
     </main>
     <footer>
 
-        
+
     </footer>
 </body>
 </html>
