--- a/index.html
+++ b/index.html
@@ -22,7 +22,22 @@
         </nav>
     </header>
     <main>
-
+        <div>
+        <div class="person">
+            <img src="images/person.png" alt="">
+        </div>
+            <div class="main">
+                <h2 class="h-title">My failures of previous year</h2>
+                <p class="title-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <ul class="sub-title">
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular belief.</li>
+                    <li>Contrary to popular , is not simply.</li>
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular simply.</li>
+                </ul>
+            </div>
+        </div>
 
     </main>
     <footer>
