--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@100&family=Work+Sans:wght@600&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@100&family=Work+Sans:wght@300;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@100&family=Work+Sans:wght@300;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@100&family=Work+Sans:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -23,22 +26,21 @@
     </header>
     <main>
         <div>
-        <div class="person">
+         <div class="person">
             <img src="images/person.png" alt="">
-        </div>
+         </div>
             <div class="main">
                 <h2 class="h-title">My failures of previous year</h2>
                 <p class="title-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
-                <ul class="sub-title">
-                    <li>Contrary to popular belief, is not simply.</li>
+                <section class="sub-title">
+                   <li> Contrary to popular belief, is not simply.</li>
                     <li>Contrary to popular belief.</li>
                     <li>Contrary to popular , is not simply.</li>
                     <li>Contrary to popular belief, is not simply.</li>
                     <li>Contrary to popular simply.</li>
-                </ul>
+                </section>
             </div>
         </div>
-
     </main>
     <footer>
 
