added styles section

--- a/index.html
+++ b/index.html
@@ -76,9 +76,20 @@
                 </div>
             </div>
         </section>
+        <section class="section">
+            <div class="section-form">
+                <h3 class="section-header">Awlays keep a positive mindset</h3>
+                <button class="btn-primary">Call Now</button>
+            </div>
+        </section>
     </main>
     <footer>
+        <div>
 
+        </div>
+        <div>
+            
+        </div>
 
     </footer>
 </body>
