--- a/index.html
+++ b/index.html
@@ -84,13 +84,32 @@
         </section>
     </main>
     <footer>
-        <div>
-
+      <div class="contact">
+        <div class="footer-title">
+            <h3>Future</h3>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            <li>Email : fuadjs629@gamil.com</li>
+            <li>Phone : 01745886875</li>
+            <div class="icons">
+              <a href="">
+                    <img src="images/icons/fb.png" alt="">
+             </a>
+                <a href="">
+                 <img src="images/icons/twitter.png" alt="">
+             </a>
+             <a href="">
+                 <img src="images/icons/youtube.png" alt="">
+             </a>
+             </div>
         </div>
-        <div>
-            
+        <div class="form-contact">
+            <h4 class="ftr-title">Subscribe</h4>
+            <form class="form">
+                <input type="email" name="" id="" placeholder="your email">
+            </form>
+            <button class="button-primary">Subscribe</button>
         </div>
-
+      </div>
     </footer>
 </body>
 </html>
