--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
         <div class="form-contact">
             <h4 class="ftr-title">Subscribe</h4>
-            <form class="form">
+            <form>
                 <input type="email" name="" id="" placeholder="your email">
             </form>
             <button class="button-primary">Subscribe</button>
